--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+    <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-jpa</artifactId>
+    <version>4.2.1</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-apt -->
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-apt</artifactId>
+    <version>4.2.1</version>
+</dependency>
+    
 	</dependencies>
 
 	<build>
@@ -56,6 +69,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+      <plugin>
+      <groupId>com.mysema.maven</groupId>
+      <artifactId>apt-maven-plugin</artifactId>
+      <version>1.1.3</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>process</goal>
+          </goals>
+          <configuration>
+            <outputDirectory>target/generated-sources/java</outputDirectory>
+            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+            <options>
+              <querydsl.entityAccessors>true</querydsl.entityAccessors>
+              <querydsl.useFields>false</querydsl.useFields>
+            </options>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
 		</plugins>
 	</build>
 
