--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,12 @@
     <artifactId>querydsl-jpa</artifactId>
     <version>4.2.1</version>
 </dependency>
-    <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-apt -->
 <dependency>
-    <groupId>com.querydsl</groupId>
-    <artifactId>querydsl-apt</artifactId>
-    <version>4.2.1</version>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-log4j12</artifactId>
+  <version>1.6.1</version>
 </dependency>
-    
+       
 	</dependencies>
 
 	<build>
@@ -81,13 +80,17 @@
           <configuration>
             <outputDirectory>target/generated-sources/java</outputDirectory>
             <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-            <options>
-              <querydsl.entityAccessors>true</querydsl.entityAccessors>
-              <querydsl.useFields>false</querydsl.useFields>
-            </options>
           </configuration>
         </execution>
       </executions>
+      <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-apt -->
+      <dependencies>
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-apt</artifactId>
+    <version>4.2.1</version>
+</dependency>
+</dependencies>
     </plugin>
 		</plugins>
 	</build>
